--- a/team_builder/accounts/templates/accounts/edit_profile.html
+++ b/team_builder/accounts/templates/accounts/edit_profile.html
@@ -1,98 +1,124 @@
 {% extends 'layout.html' %}
 {% load static from staticfiles %}
 {% block content %}
-
-  <div class="bounds circle--page">
-    <div class="circle--page--header circle--fluid">
-      <div class="circle--fluid--cell circle--fluid--primary">
-        <h2>Profile</h2>
-      </div>
-      <div class="circle--fluid--cell circle--fluid--secondary">
-        <a class="button button-primary icon-on-left" 
-           onclick="document.getElementById('form1').submit();
-                    document.getElementById('form2').submit();">Save Changes
-      </a>
-      </div>
-    </div>
-
-    <div class="grid-70">
-      <form method="POST" id="form1" enctype="multipart/form-data" action="{% url 'accounts:edit_profile' %}">
-        {% csrf_token %}
-         {{ form.full_name}}
-         {{ form.bio|escape}}
-   
-      </form>
-
-
-      <h2>Past Projects</h2>
-      <table class="u-full-width circle--table">
-        <thead>
-          <tr>
-            <th>Project Title</th>
-            <th class="circle--cell--right">Project Needs</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="clickable-row" data-href="project.html">
-            <td>
-              <h3>Invoice Delivery Tool</h3>
-            </td>
-            <td class="circle--cell--right">
-              <span class="secondary-label">Rails Developer</span>
-            </td>
-          </tr>
-          <tr class="clickable-row" data-href="project.html">
-            <td>
-              <h3>Twitter Client</h3>
-            </td>
-            <td class="circle--cell--right">
-              <span class="secondary-label">Designer</span>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="grid-25 grid-push-5">
-
-      <div class="circle--secondary--module">
-        {% if user.profile_image.image %}
-          <img class="avatar" src="{{ user.profile_image.image.url}}">
-        {% else %}
-          <div class="circle--primary--avatar">
-            <form method="POST" id="form2" enctype="multipart/form-data" action="{% url 'accounts:upload_profile_image' %}">               
-              {% csrf_token %}
-              {{ ProfileImageForm.as_p}}
-    
-            </form>
+  <form action="" enctype="multipart/form-data" method="post">{% csrf_token %}
+      <div class="bounds circle--page">
+        <div class="circle--page--header circle--fluid">
+          <div class="circle--fluid--cell circle--fluid--primary">
+            <h2>Profile</h2>
           </div>
-    
-        {% endif %}
-      </div>
+          <div class="circle--fluid--cell circle--fluid--secondary">
+            <input type="submit" class="button button-primary icon-on-left" value="Save Changes">
+          </div>
+        </div>
 
-      <div class="circle--secondary--module">
-        <h4>My Skills</h4>
-        <ul class="circle--clone--list">
-          <li>
-            <input type="text" placeholder="Skill" />
-            <a class="circle--clone--add">Add Skill</a>
-            <a class="circle--clone--remove">Remove</a>
-          </li>
-        </ul>
-      </div>
+        <div class="grid-70">
+          {{ form.full_name}}
+          <div class="circle--article--body">
+              {{ form.bio|escape}}
+          </div>
 
-      <div class="circle--secondary--module">
-        <h4>My Projects</h4>
-        <ul class="circle--clone--list">
-          <li>
-            <input type="text" placeholder="Project Name" />
-            <input type="text" placeholder="Project URL" />
-            <a class="circle--clone--add">Add Project</a>
-            <a class="circle--clone--remove">Remove</a>
-          </li>
-        </ul>
-      </div>
-    </div>
+          <h2>Past Projects</h2>
+          <table class="u-full-width circle--table">
+            <thead>
+              <tr>
+                <th>Project Title</th>
+                <th class="circle--cell--right">Project Needs</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="clickable-row" data-href="project.html">
+                <td>
+                  <h3>Invoice Delivery Tool</h3>
+                </td>
+                <td class="circle--cell--right">
+                  <span class="secondary-label">Rails Developer</span>
+                </td>
+              </tr>
+              <tr class="clickable-row" data-href="project.html">
+                <td>
+                  <h3>Twitter Client</h3>
+                </td>
+                <td class="circle--cell--right">
+                  <span class="secondary-label">Designer</span>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
 
-  </div>
-  {% endblock %}
+        <div class="grid-25 grid-push-5">
+          {% if form.instance.image %}
+          <div class="circle--secondary--module">
+              <img src="{{ form.instance.image.url }}">
+          </div>
+          <p>Change Photo</p>
+          <input type="file" value="change image" name="image" id="id_image">
+          <a class="button" id="upload_link" >Upload new Photo</a>
+          <hr>
+          {% else %}
+          <div class="circle--secondary--module">
+              <div class="circle--primary--avatar">
+                  <input type="file" value="change image" name="image" id="id_image">
+                  <a class="button" id="upload_link" >Upload Photo</a>
+              </div>
+          </div>
+          {% endif %}
+          <div class="circle--secondary--module">
+            <h4>My Skills</h4>
+            <ul class="circle--clone--list">
+              <li>
+                <input type="text" placeholder="Skill" />
+                <a class="circle--clone--add">Add Skill</a>
+                <a class="circle--clone--remove">Remove</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="circle--secondary--module">
+            <h4>My Projects</h4>
+            <ul class="circle--clone--list">
+              {{ projects.management_form }}
+              <li>
+                {% if projects|length == 0%}
+                  <input type="text" name='projects-0-title' id='id_projects-0-title' placeholder="Project Name" />
+                  <input type="text" name='projects-0-url' id='id_projects-0-url' placeholder="Project URL" />
+                  <a class="circle--clone--add">Add Project</a>
+                  <a class="circle--clone--remove">Remove</a>
+                {% else %}
+                  {% for form in projects %}
+                      {{form.id}}
+                      {{form.title}}
+                      {{form.url}}
+                      {% if form.instance.id %}
+                      {{form.DELETE}} Delete Project</br>
+                      {%  endif %}
+                   {% endfor %}
+                   <a class="circle--clone--add">Add Project</a>
+                   <a class="circle--clone--remove">Remove</a>
+                {% endif %}
+               </li>
+
+
+             
+            </ul>
+          </div>
+        </div>
+
+      </div>
+</form>
+
+{% endblock %}
+{% block js%}
+<script>
+  $("#id_image").hide();
+
+
+    $("#upload_link").on('click', function(e){
+    e.preventDefault();
+    $("#id_image").trigger('click');
+  });
+
+</script>
+{% endblock %}
+
