--- a/team_builder/accounts/templates/accounts/edit_profile.html
+++ b/team_builder/accounts/templates/accounts/edit_profile.html
@@ -78,21 +78,38 @@
           <div class="circle--secondary--module">
             <h4>My Projects</h4>
             <ul class="circle--clone--list">
-                {% for form in projects %}
-                <li id='projects'>
-                  {{ form.title }}
-                  {{ form.url }}
-                  {% if form.instance.pk %}{{form.DELETE}} {% endif %}
-                </li>
-                {% endfor %}
             </ul>
-            {{ projects.management_form }}
           </div>
         </div>
 
       </div>
+      <table border="0" cellpadding="0" cellspacing="0">
+        <tbody>
+            {% for form in projects.forms %}
+            <tr>
+               <td>
+                  {% if form.instance.pk %}{{ form.DELETE }}{% endif %}
+                  {{ form.title }}
+               </td>
+               <td>{{ form.url }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+
+    </table>
+    {{ projects.management_form }}
+
 
 </form>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+<script type="text/javascript" src="{% static 'js/jquery.formset.js' %}"></script>
+<script type="text/javascript">
+  $(function() {
+      $('#profile-form tbody tr').formset({
+          prefix: '{{ projects.prefix }}'
+      });
+  })
+</script>
 
 {% endblock %}
 
