--- a/team_builder/templates/index.html
+++ b/team_builder/templates/index.html
@@ -1,1 +1,40 @@
 {% extends 'layout.html' %}
+{% block content %}
+<div class="bounds circle--page">
+    <div class='circle--page--header circle--fluid'>
+        <div class="circle--fluid--cell circle--fluid--primary">
+            <h2>Projects</h2>
+        </div>
+        <div class='circle--fluid--cell circle--fluid--secondary'>
+            {% if user.is_authenticated %}
+                <a class="button button-primary icon-on-left" href="{% url 'projects:add' %}">New Project</a>
+            {% endif %}
+        </div>
+    </div>
+    <div class='grid-25'>
+
+    </div>
+    <div class='grid-70 grid-push-5'>
+        <table class="u-full-width circle--table">
+            <thead>
+                <tr>
+                    <th>Project Title</th>
+                    <th class="circle--cell--right">Project Needs</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for project in projects %}
+                    <tr class="clickable-row">
+                        <td>
+                            <h3>{{ project.title}}</h3>
+                        </td>
+                        <td class="circle--cell--right">
+                            <span class="secondary-label">project requiremenst</span>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+{% endblock %}
