--- a/team_builder/projects/templates/projects/project_form.html
+++ b/team_builder/projects/templates/projects/project_form.html
@@ -13,10 +13,22 @@
     </div>
     <div class="bounds circle--page circle--article">
         <div class='grid-70'>
-            {{form.title.errors}}
-            {{form.title}}
-            {{ form.description.error }}
-            {{form.description}}
+            <div class='circle--article--body'>
+                {{form.title.errors}}
+                {{form.title}}
+                {{ form.description.error }}
+                {{form.description}}
+            </div>
+            <div class='circle--project--positions'>
+                {{ formset.management_form }}
+                <h2>Add Positions</h2>
+                <ul class='circle--group--list circle--clone--list'>
+                   {% for form in formset %}
+                     <li>{{form.title}}</li>
+                     <li>{{form.description}}</li>
+                    {% endfor %}
+                </ul>
+            </div>
 
         </div>
         <div class='grid-25 grid-push-5'>
