--- a/team_builder/templates/index.html
+++ b/team_builder/templates/index.html
@@ -29,7 +29,7 @@
                             <h3>{{ project.title}}</h3>
                         </td>
                         <td class="circle--cell--right">
-                            <span class="secondary-label">project requiremenst</span>
+                            <span class="secondary-label">{{project.position.all}}</span>
                         </td>
                     </tr>
                 {% endfor %}
