--- a/team_builder/templates/layout.html
+++ b/team_builder/templates/layout.html
@@ -67,8 +67,12 @@
   {% endblock %}
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script type="text/javascript" src="{% static 'js/jquery.formset.js' %}"></script>
-  {% block js%}
-  {% endblock %}
+  <script type="text/javascript">
+    $(function() {
+        $('#positions li').formset();
+    })
+  </script>
+
   
 
   <script type="text/javascript" src="{% static 'js/autogrow.js' %}"></script>
