--- a/team_builder/accounts/templates/accounts/profile.html
+++ b/team_builder/accounts/templates/accounts/profile.html
@@ -6,88 +6,89 @@
 
 
 {% block content %}
+<div class="circle--actions--bar">
+    <nav class="bounds">
+      <ul class="circle--pill--list">
+        <li><a href="applications.html">Applications</a></li>
+        <li><a class="selected" href="profile.html">Profile</a></li>
+      </ul>
+    </nav>
+  </div>
 
-<div class="bounds circle--page">
-        <div class="circle--page--header circle--fluid">
-          <div class="circle--fluid--cell circle--fluid--primary">
-            <h2>Profile</h2>
-          </div>
-          <div class="circle--fluid--cell circle--fluid--secondary">
-            <a class="button icon-on-left" href="{% url 'accounts:edit_profile' %}">Edit</a>
-          </div>
-        </div>
-    
-        <div class="grid-70">
-            {% if user.first_name %}
-                <h1>{{user.first_name}} {{user.last_name}}</h1>
-                <div class="circle--article--body">
-                    {{user.bio|escape}}
-                </div>
-            {% else %}
-                <h1>Your profile needs updating. Click click edit profile</h1>
-            {% endif %}
-    
-          <h2>Past Projects</h2>
-          <table class="u-full-width circle--table">
-            <thead>
-              <tr>
-                <th>Project Title</th>
-                <th class="circle--cell--right">Project Needs</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="clickable-row" data-href="project.html">
-                <td>
-                  <h3>Invoice Delivery Tool</h3>
-                </td>
-                <td class="circle--cell--right">
-                  <span class="secondary-label">Rails Developer</span>
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="project.html">
-                <td>
-                  <h3>Twitter Client</h3>
-                </td>
-                <td class="circle--cell--right">
-                  <span class="secondary-label">Designer</span>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-    
-        <div class="grid-25 grid-push-5">
-    
-          <div class="circle--secondary--module">
-            <div class="circle--primary--avatar">
-                {% if user.image %}
-                 <img src={{ user.image.url }} alt="profile image">
-               {% endif %}
-            </div>
-          </div>
-    
-          <div class="circle--secondary--module">
-            <h4>My Skills</h4>
-            <ul class="unloaded">
-              <li>Skill 1</li>
-              <li>Skill 2</li>
-              <li>Skill 3</li>
-              <li>Skill 4</li>
-              <li>Skill 5</li>
-            </ul>
-          </div>
-    
-          <div class="circle--secondary--module">
-            <h4>My Projects</h4>
-            <ul class="circle--link--list">
-              <li><a>Project 1</a></li>
-              <li><a>Project 2</a></li>
-              <li><a>Project 3</a></li>
-              <li><a>Project 4</a></li>
-            </ul>
-          </div>
-        </div>
-    
+  <div class="bounds circle--page">
+    <div class="circle--page--header circle--fluid">
+      <div class="circle--fluid--cell circle--fluid--primary">
+        <h2>Profile</h2>
       </div>
+      <div class="circle--fluid--cell circle--fluid--secondary">
+        <a class="button icon-on-left" href="{% url 'accounts:edit_profile' %}">Edit</a>
+      </div>
+    </div>
+
+    <div class="grid-70">
+      <h1>{{ user.full_name }}</h1>
+      <div class="circle--article--body">
+       <p>{{ user.bio|escape}}</p>
+      </div>
+
+      <h2>Past Projects</h2>
+      <table class="u-full-width circle--table">
+        <thead>
+          <tr>
+            <th>Project Title</th>
+            <th class="circle--cell--right">Project Needs</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="clickable-row" data-href="project.html">
+            <td>
+              <h3>Invoice Delivery Tool</h3>
+            </td>
+            <td class="circle--cell--right">
+              <span class="secondary-label">Rails Developer</span>
+            </td>
+          </tr>
+          <tr class="clickable-row" data-href="project.html">
+            <td>
+              <h3>Twitter Client</h3>
+            </td>
+            <td class="circle--cell--right">
+              <span class="secondary-label">Designer</span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="grid-25 grid-push-5">
+
+      <div class="circle--secondary--module">
+          <img class="avatar" src="{{ user.image.url }}">
+      </div>
+
+      <div class="circle--secondary--module">
+        <h4>My Skills</h4>
+        <ul class="unloaded">
+          <li>Skill 1</li>
+          <li>Skill 2</li>
+          <li>Skill 3</li>
+          <li>Skill 4</li>
+          <li>Skill 5</li>
+        </ul>
+      </div>
+
+      <div class="circle--secondary--module">
+        <h4>My Projects</h4>
+        <ul class="circle--link--list">
+          <li><a>Project 1</a></li>
+          <li><a>Project 2</a></li>
+          <li><a>Project 3</a></li>
+          <li><a>Project 4</a></li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+
 
 {% endblock %}
