--- a/team_builder/templates/index.html
+++ b/team_builder/templates/index.html
@@ -1,14 +1,20 @@
 {% extends 'layout.html' %}
 {% load static from staticfiles %}
+{% block title %}| Home {% endblock %}
 {% block content %}
 <div class="bounds circle--page">
     <div class='circle--page--header circle--fluid'>
         <div class="circle--fluid--cell circle--fluid--primary">
-            <h2>Projects</h2>
+            {% if search_val %}
+                <h2>Search</h2>
+                <p>Search results for: {{ search_val }}</p>
+            {% else %}
+                <h2>Projects</h2>
+            {% endif %}
         </div>
         <div class='circle--fluid--cell circle--fluid--secondary'>
             {% if user.is_authenticated %}
-                <a class="button button-primary icon-on-left" href="{% url 'projects:add' %}">New Project</a>
+                <a class="button button-primary icon-on-left" href="{% url 'projects:add' %}">+ New Project</a>
             {% endif %}
         </div>
     </div>
@@ -17,7 +23,9 @@
             <h4>Project Needs</h4>
             <ul class='circle--filter--list'>
                 {% if positions%}
-                    <li><a {% if filter == 'All Needs' %}class='selected'{% endif %} href='{% url 'projects:filter' filter='All Needs' %}'>All Needs</a></li>
+                    {% if not search_val %}
+                        <li><a {% if filter == 'All Needs' %}class='selected'{% endif %} href='{% url 'projects:filter' filter='All Needs' %}'>All Needs</a></li>
+                    {% endif %}
                     {% for position in positions%}
                         <li><a {% if filter == position.title %}class='selected' {% endif %} href='{% url 'projects:filter' filter=position%}'>{{position.title}}</a></li>
                     {% endfor %}
