--- a/team_builder/templates/layout.html
+++ b/team_builder/templates/layout.html
@@ -6,7 +6,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>{% block title %}{% endblock %}</title>
+  <title>Team builder {% block title %} {% endblock %}</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -37,19 +37,22 @@
         </div>
         <div class="circle--fluid--cell circle--fluid--primary">
           <div class="circle--search">
-            <input type="text" placeholder="Search Projects..." />
-            <button>
-              <svg version="1.1" class="search" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 12 12" xml:space="preserve">
-                <path d="M12,10.6L8.3,6.9C8.7,6.2,9,5.4,9,4.5C9,2,7,0,4.5,0S0,2,0,4.5S2,9,4.5,9c0.9,0,1.7-0.3,2.4-0.7l3.7,3.7L12,10.6z M2,4.5
-                C2,3.1,3.1,2,4.5,2S7,3.1,7,4.5C7,5.9,5.9,7,4.5,7S2,5.9,2,4.5z"/>
-              </svg>
-            </button>
+            <form method='GET' action="{%  url 'projects:search' %}">
+              <input type="text" id='search' name='search' placeholder="Search Projects..." />
+              <button role='submit'>
+                <svg version="1.1" class="search" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 12 12" xml:space="preserve">
+                  <path d="M12,10.6L8.3,6.9C8.7,6.2,9,5.4,9,4.5C9,2,7,0,4.5,0S0,2,0,4.5S2,9,4.5,9c0.9,0,1.7-0.3,2.4-0.7l3.7,3.7L12,10.6z M2,4.5
+                  C2,3.1,3.1,2,4.5,2S7,3.1,7,4.5C7,5.9,5.9,7,4.5,7S2,5.9,2,4.5z"/>
+                </svg>
+              </button>
+           </form>
           </div>
         </div>
         <div class="circle--fluid--cell circle--fluid--secondary">
           <nav>
             <ul class="circle--inline">
               {% if user.is_authenticated %}
+                <li><a href="{% url 'accounts:profile' option=None %}">Profile</a></li>
                 <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
               {% else %}
                 <li><a href="{% url 'accounts:signup' %}">Sign Up</a></li>
@@ -67,17 +70,27 @@
   {% endblock %}
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script type="text/javascript" src="{% static 'js/jquery.formset.js' %}"></script>
+
   <script type="text/javascript">
     $(function() {
         $('#positions li').formset();
+
+
+        $('#skills li').formset({
+          addText:'Add Skill',
+        
+        });
+
+        $('#completed_projects li').formset({
+          addText:'Add Project',
+          
+        });
     })
   </script>
-
-  
-
   <script type="text/javascript" src="{% static 'js/autogrow.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/global.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/app.js' %}"></script>
+
 
   
 
