--- a/team_builder/accounts/templates/accounts/profile.html
+++ b/team_builder/accounts/templates/accounts/profile.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 {% load static from staticfiles %}
 
-{% block title %}Profile | {{ block.super }}{% endblock %}
+{% block title %}{{ block.super }}|Profile{% endblock %}
 
 
 {% block content %}
@@ -26,9 +26,17 @@
     </div>
 
     <div class="grid-70">
-      <h1>{{ user.full_name }}</h1>
+      {% if not user.full_name %}
+        <h1>{{ user.display_name }}</h1>
+      {% else %}
+        <h1>{{ user.full_name }}</h1>
+      {% endif %}
       <div class="circle--article--body">
-       <p>{{ user.bio|escape}}</p>
+        {% if not user.bio %}
+          <p>You dont have a bio yet! Your profile needs editing</p>
+        {% else %}
+          <p>{{ user.bio|escape}}</p>
+        {% endif %}
       </div>
 
       <h2>Past Projects</h2>
@@ -63,27 +71,38 @@
     <div class="grid-25 grid-push-5">
 
       <div class="circle--secondary--module">
-          <img class="avatar" src="{{ user.image.url }}">
+          {% if user.image%}
+             <img class="avatar" src="{{ user.image.url }}">
+          {% else %}
+            <div class='circle--primary--avatar'>
+                <a>No image uploaded yet! click edit add a new photo</a>
+             </div>
+          {% endif %}
       </div>
 
       <div class="circle--secondary--module">
         <h4>My Skills</h4>
         <ul class="unloaded">
-          <li>Skill 1</li>
-          <li>Skill 2</li>
-          <li>Skill 3</li>
-          <li>Skill 4</li>
-          <li>Skill 5</li>
+          {% if not user.skill_set.all %}
+            <li>You have not added any skills</li>
+          {% else %}
+            {% for skill in user.skill_set.all %}
+            <li>{{ skill.name }}</li>
+            {% endfor %}
+          {% endif %}
         </ul>
       </div>
 
       <div class="circle--secondary--module">
         <h4>My Projects</h4>
         <ul class="circle--link--list">
-          <li><a>Project 1</a></li>
-          <li><a>Project 2</a></li>
-          <li><a>Project 3</a></li>
-          <li><a>Project 4</a></li>
+          {% if not user.usercompletedproject_set.all %}
+            <li>You have not added any completed projects yet</li>
+          {% else %}
+            {% for project in user.usercompletedproject_set.all %}
+            <li><a href="{{project.url}}" target="_blank">{{ project.title }}</a></li>
+            {% endfor %}
+          {% endif %}
         </ul>
       </div>
     </div>
