--- a/team_builder/templates/layout.html
+++ b/team_builder/templates/layout.html
@@ -21,6 +21,9 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
+    crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'css/global.css' %}">
 
   <!-- JS
@@ -29,6 +32,15 @@
 
 </head>
 <body>
+  {% if messages %}
+    {% for message in messages %}
+      {% if message.tags == 'error' %}
+        <div class="alert alert-danger">
+          {{ message}}
+        </div>
+      {% endif %}
+    {% endfor %}
+{% endif %}
   <header class="circle--header">
     <div class="bounds">
       <div class="circle--fluid">
