--- a/team_builder/projects/templates/projects/project_edit.html
+++ b/team_builder/projects/templates/projects/project_edit.html
@@ -7,7 +7,7 @@
   <div class="circle--actions--bar">
     <div class="bounds">
       <div class="grid-100">
-        <a class="button button-primary" href="project.html">Save Changes</a>
+        <input type="submit" class="button button-primary" value="Save Changes">
         <a class="button button-text" href="index.html">Delete Project</a>
       </div>
     </div>
