--- a/team_builder/static/css/global.css
+++ b/team_builder/static/css/global.css
@@ -2110,4 +2110,7 @@ input[type="email"].circle--input--h6, input[type="number"].circle--input--h6, i
 .logo:hover {
   box-shadow: 0 0 0 15px #fff inset;
 }
+a{
+  text-decoration: none;
+}
 
